<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_background"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_logo" />


        <ImageView
            android:id="@+id/nameImageView"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/name"
            android:contentDescription="@string/app_name" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:indeterminateTint="@color/primary_green"
            android:visibility="visible" />


        <TextView
            android:id="@+id/taglineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_tagline"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>


    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/version_info"
        android:textColor="@color/text_secondary"
        android:textSize="12sp" />

</RelativeLayout>