<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp">



    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/skip"
        android:textColor="@color/primary_green"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true" />



    <ImageView
        android:id="@+id/ivOnboarding"
        android:layout_width="391dp"
        android:layout_height="485dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/onboarding2_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/onboard" />

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="159dp"
        android:layout_below="@+id/ivOnboarding"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/onboarding2_title"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:paddingHorizontal="10dp"
            android:text="@string/onboarding2_description"
            android:textColor="@color/text_secondary"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30px"
            android:orientation="horizontal">

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginHorizontal="3dp"
                android:background="@drawable/dot_inactive" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginHorizontal="3dp"
                android:background="@drawable/dot_active" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginHorizontal="3dp"
                android:background="@drawable/dot_inactive" />

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/primary_green"
            android:elevation="4dp"
            android:stateListAnimator="@null"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>